# order-system-vue-fastapi

./: .gitignore  AI_RECOMMEND_DESIGN.md  LICENSE  NOTICE  README.md  RECOMMEND_SYSTEM.md  package-lock.json  setup.sh
backend/: .env.example  pyproject.toml
backend/app/: main.py
backend/app/api/: category_api.py  menu_api.py  menulist_api.py  monitoring_api.py  recommend_api.py  voice_api.py
backend/app/api/auth/: auth_schema.py  dependencies.py  models.py  routes.py  schemas.py  user_crud.py  utils.py
backend/app/crud/: category_crud.py  menu_crud.py  order_crud.py
backend/app/database/: database.py
backend/app/middleware/: logging_middleware.py
backend/app/ml/: ML_FOLDER_RESTRUCTURE_PROPOSAL.md  __init__.py
backend/app/ml/base/: __init__.py  abstract_model.py  py_torch_base_model.py
backend/app/ml/data/: __init__.py  cache.py  preprocessing.py
backend/app/ml/inference/: __init__.py  base_model.py  batch_predictor.py  model_loader.py  predictor.py
backend/app/schemas/: category_schema.py  menu_schema.py  order_schema.py  voice_schema.py
backend/app/service/: fuzzy_matcher.py  phase5_ai_strategy.py  recommend_menu.py  voice_handler.py
backend/app/utils/: logging_config.py
backend/scripts/: generate_order_dummy_data.py  insert_test_data.py
backend/test/: conftest.py  test_ai_training.py  test_auth.py  test_category.py  test_menu.py  test_order.py  test_recommend.py
backend/test/testdata/: cleanup_all.sql  insert_categories.sql  insert_menus.sql  insert_orders.sql  insert_recommend_orders.sql  testdata_categories.csv
(+41 files in other folders)
